--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ dribbble_username:
 # two ways to comment, only choose one, and use your own short name
 # 兩種評論插件，選一個就好了，使用自己的 short_name
 duoshuo_shortname: #hygblog
-disqus_shortname: ray-sin-blog
+disqus_shortname: ray-sin
 
 # statistic analysis 統計代碼
 # 百度統計 id，將統計代碼替換為自己的百度統計id，即
