--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ dribbble_username:
 # comments
 # two ways to comment, only choose one, and use your own short name
 # 兩種評論插件，選一個就好了，使用自己的 short_name
-duoshuo_shortname: #hygblog
+# duoshuo_shortname: #hygblog
 disqus_shortname: ray-sin
 
 # statistic analysis 統計代碼
