--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,6 +18,8 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields: # The fields each document in this collection have
+      - {label: "Permalink", name: "permalink", widget: "string", default: "/posts/new", required: true}
+      - {label: "Display", name: "display", widget: "select", options: ["normal", "sticky", "hide"], default: "normal"}
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD HH:mm:ss Z"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
