--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Ray Sin Blog
+title: RaySin
+author: RaySin
 brief-intro: on GitHub
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://q8977452.github.io/" # the base hostname & protocol for your site
 description: Hello, I'm Ray. Welcome to my website. There mainly record my encountered problems and study things. If you have any problems or question, you can discuss under the article. 你好，我是 Ray Sin 辛祐任 歡迎來到我的網站。 這裡主要是記錄我遇到的問題和我學習過的東西。 如果您有任何問題或疑問，可以在文章下方留言討論。
 
-permalink: /:year/:month/:day/:title/
+hostname: q8977452.github.io
+domain: https://q8977452.github.io/
+github-repo: https://github.com/XUJINKAI/XUJINKAI.github.io
 
+permalink: /posts/:title
 # other links
 # twitter_username: 
 # facebook_username: 
@@ -57,5 +61,6 @@ tag_dir: tag/
 excerpt_separator: "\n\n\n\n"
 
 # paginate
+
 gems: [jekyll-paginate]
 paginate: 6
