fix(cms): adjust _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: Hello, I'm Ray. Welcome to my website. There mainly record my encou
 
 hostname: q8977452.github.io
 domain: https://q8977452.github.io/
-github-repo: https://github.com/XUJINKAI/XUJINKAI.github.io
+github-repo: https://github.com/q8977452/q8977452.github.io
 
 permalink: /posts/:title
 # other links
